--- a/HTML/cantbloques.html
+++ b/HTML/cantbloques.html
@@ -12,7 +12,7 @@
 
 <body>
     <a href="https://www.uni.edu.ni/#/" target="_blank">
-        <img src="/IMG/UNI-Logo/uni.png" alt="Logo de la Universidad" id="uni-logo">
+        <img src="../IMG/UNI-Logo/uni.png" alt="Logo de la Universidad" id="uni-logo">
     </a>
 
     <!-- El código  crea un menú de navegación con múltiples enlaces. Utiliza clases HTML y CSS.
