--- a/HTML/cantbloques.html
+++ b/HTML/cantbloques.html
@@ -25,8 +25,8 @@
     <nav class="sidebar">
         <div class="text"><i class='fas fa-hard-hat' style='font-size:27px'></i>INGMASTER</div>
         <ul>
-            <li class="active"><a href="/HTML/index.html" class="fas fa-home"></i>Inicio</a></li>
-            <li><a href="/HTML/formulario.html"><i class="fa fa-superscript"></i>Formularios</a></li>
+            <li class="active"><a href="../HTML/index.html" class="fas fa-home"></i>Inicio</a></li>
+            <li><a href="../HTML/formulario.html"><i class="fa fa-superscript"></i>Formularios</a></li>
             <li>
                 <a href="#" class="Desing-btn"><i class='fas fa-hard-hat' style='font-size:20px'></i>Concreto
                     <span class="fas fa-caret-down first"></span>
@@ -37,7 +37,7 @@
                     <li><a href="../HTML/Concreto/volzapata.html"><i class="fas fa-cubes "></i>Volumen Zapata</a></li>
                     <li><a href="../HTML/Concreto/repello.html"><i class="fas fa-building"></i>Repello</a></li>
                     <li><a href="../HTML/Concreto/volumen.html"><i class="fas fa-cube"></i>Volumen Concreto</a></li>
-                    <li><a href="../../Doc/RNC-2007.pdf" target="_blank"><i class="far fa-file-alt"
+                    <li><a href="../Doc/RNC-2007.pdf" target="_blank"><i class="far fa-file-alt"
                                 aria-hidden="true"></i>RNC-2007</a></li>
                 </ul>
             </li>
