--- a/HTML/cantbloques.html
+++ b/HTML/cantbloques.html
@@ -41,7 +41,7 @@
                                 aria-hidden="true"></i>RNC-2007</a></li>
                 </ul>
             </li>
-            <li><a href="/HTML/cantbloques.html"><i class="fa fa-cubes"></i>Cantidad de bloques</a></li>
+            <li><a href="../HTML/cantbloques.html"><i class="fa fa-cubes"></i>Cantidad de bloques</a></li>
             <li>
                 <a href="#" class="Config-btn"><i class="fa fa-cog fa-spin"></i>Acero
                     <span class="fas fa-caret-down second"></span>
@@ -192,10 +192,10 @@
     <div id="areaParedResultado" class="estiloResultado"></div>
 
     <!-- Imagen del bloque sólido -->
-    <img id="imagenBloqueSolido" src="/IMG/bloque-sólido.png" alt="Bloque Sólido">
+    <img id="imagenBloqueSolido" src="../IMG/bloque-sólido.png" alt="Bloque Sólido">
 
     <!-- Imagen del bloque hueco -->
-    <img id="imagenBloqueHueco" src="/IMG/bloque-hueco.png" alt="Bloque Hueco">
+    <img id="imagenBloqueHueco" src="../IMG/bloque-hueco.png" alt="Bloque Hueco">
 
     <button id="copiarResultados">Copiar Resultados</button>
 
