--- a/HTML/formulario.html
+++ b/HTML/formulario.html
@@ -87,7 +87,7 @@ button {
     <nav class="sidebar">
         <div class="text"><i class='fas fa-hard-hat' style='font-size:27px'></i>INGMASTER</div>
         <ul>
-            <li class="active"><a href="/HTML/index.html" class="fas fa-home"></i>Inicio</a></li>
+            <li class="active"><a href="../HTML/index.html" class="fas fa-home"></i>Inicio</a></li>
             <li><a href="../HTML/formulario.html"><i class="fa fa-superscript"></i>Formularios</a></li>
             <li>
                 <a href="#" class="Desing-btn"><i class='fas fa-hard-hat' style='font-size:20px'></i>Concreto
@@ -99,11 +99,11 @@ button {
                     <li><a href="../HTML/Concreto/volzapata.html"><i class="fas fa-cubes "></i>Volumen Zapata</a></li>
                     <li><a href="../HTML/Concreto/repello.html"><i class="fas fa-building"></i>Repello</a></li>
                     <li><a href="../HTML/Concreto/volumen.html"><i class="fas fa-cube"></i>Volumen Concreto</a></li>
-                    <li><a href="../../Doc/RNC-2007.pdf" target="_blank"><i class="far fa-file-alt"
+                    <li><a href="../Doc/RNC-2007.pdf" target="_blank"><i class="far fa-file-alt"
                                 aria-hidden="true"></i>RNC-2007</a></li>
                 </ul>
             </li>
-            <li><a href="/HTML/cantbloques.html"><i class="fa fa-cubes"></i>Cantidad de bloques</a></li>
+            <li><a href="../HTML/cantbloques.html"><i class="fa fa-cubes"></i>Cantidad de bloques</a></li>
             <li>
                 <a href="#" class="Config-btn"><i class="fa fa-cog fa-spin"></i>Acero
                     <span class="fas fa-caret-down second"></span>
