--- a/HTML/SUMATORIA.html
+++ b/HTML/SUMATORIA.html
@@ -22,7 +22,7 @@
     <nav class="sidebar">
         <div class="text"><i class='fas fa-hard-hat' style='font-size:27px'></i>INGMASTER</div>
         <ul>
-            <li class="active"><a href="/HTML/index.html" class="fas fa-home"></i>Inicio</a></li>
+            <li class="active"><a href="../HTML/index.html" class="fas fa-home"></i>Inicio</a></li>
             <li><a href="../HTML/formulario.html"><i class="fa fa-superscript"></i>Formularios</a></li>
             <li>
                 <a href="#" class="Desing-btn"><i class='fas fa-hard-hat' style='font-size:20px'></i>Concreto
