--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </ul>
     </nav>
     <script src="JS/navmenu.js"></script>
-
+<section>
     <div class="presentar">
 
         <h1 class="content-header">Bienvenido a IngMaster</h1>
@@ -174,7 +174,7 @@
             <button id="next"><i class="fas fa-angle-right"></i></button>
         </div>
     </div>
-
+</section>
     <script src="JS/index.js"></script>
 </body>
 
