--- a/HTML/Concreto/dosificacion.html
+++ b/HTML/Concreto/dosificacion.html
@@ -232,9 +232,9 @@
             const resultadoDosificacion = `
                 Resistencia del Concreto: ${resistenciaConcreto}<br>    
                 Cantidad de Cemento: ${cantidadCemento.toFixed(2)} kg<br>
-                Proporción de Arena: ${proporcionArena.toFixed(2) * cantidadConcreto}m³ - ${pesoArena.toFixed(2)} kg<br>
-                Proporción de Grava: ${proporcionGrava.toFixed(2) * cantidadConcreto}m³ - ${pesoGrava.toFixed(2)} kg<br>
                 Bolsas de Cemento (42.5 kg): ${bolsasCemento} bolsas<br>
+                Cantidad de Arena: ${proporcionArena.toFixed(2) * cantidadConcreto}m³ - ${pesoArena.toFixed(2)} kg<br>
+                Cantidad de Grava: ${proporcionGrava.toFixed(2) * cantidadConcreto}m³ - ${pesoGrava.toFixed(2)} kg<br>
                 Costo de Cemento: C$${preciobolsas.toFixed(2)}<br>
                 Costo de Arena: C$${precioArena.toFixed(2)}<br>
                 Costo de Grava: C$${precioGrava.toFixed(2)}<br>
