--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="HTML/Concreto/volzapata.html"><i class="fas fa-cubes "></i>Volumen Zapata</a></li>
                     <li><a href="HTML/Concreto/repello.html"><i class="fas fa-building"></i>Repello</a></li>
                     <li><a href="HTML/Concreto/volumen.html"><i class="fas fa-cube"></i>Volumen Concreto</a></li>
-                    <li><a href="../Doc/RNC-2007.pdf" target="_blank"><i class="far fa-file-alt"
+                    <li><a href="Doc/RNC-2007.pdf" target="_blank"><i class="far fa-file-alt"
                                 aria-hidden="true"></i>RNC-2007</a></li>
                 </ul>
             </li>
