--- a/HTML/Acero/cantidad.html
+++ b/HTML/Acero/cantidad.html
@@ -72,19 +72,19 @@
         <h1>Cantidad de Acero en Vigas y Columnas</h1>
 
         <label for="alto">Alto de Vigas/Columnas (cm):</label>
-        <input type="number" id="alto" step="0.1" placeholder="Ingresa el alto">
+        <input type="number" id="alto" step="0.1" placeholder="Ingresa el alto" title="Altura en vigas y ancho en columnas">
         <br>
         <label for="ancho">Ancho de Vigas/Columnas (cm):</label>
-        <input type="number" id="ancho" step="0.1" placeholder="Ingresa el ancho">
+        <input type="number" id="ancho" step="0.1" placeholder="Ingresa el ancho" title="Ancho en vigas y ancho en columnas">
 
         <label for="longitud">Longitud de Vigas/Columnas (m):</label>
-        <input type="number" id="longitud" step="0.1" placeholder="Ingresa la longitud">
+        <input type="number" id="longitud" step="0.1" placeholder="Ingresa la longitud" title="Longitud en vigas y altitud en columnas">
 
         <label for="cantidad">Cantidad de Vigas/Columnas:</label>
         <input type="number" id="cantidad" placeholder="Ingresa la cantidad">
 
         <label for="elementos">Elementos por Viga/Columna:</label>
-        <input type="number" id="elementos" placeholder="Ingresa el número de elementos">
+        <input type="number" id="elementos" placeholder="Ingresa el número de elementos" title="Cantidad de varillas principales">
 
         <label for="largoVarilla">Largo de Varilla (m):</label>
         <input type="number" id="largoVarilla" step="0.1" placeholder="Ingresa el largo de la varilla">
