--- a/HTML/Concreto/dosificacion.html
+++ b/HTML/Concreto/dosificacion.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" href="../../IMG/ingmaster.png" type="image/x-icon">
     <link rel="stylesheet" href="../../CSS/StyleMenu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
