--- a/HTML/Concreto/escaleras.html
+++ b/HTML/Concreto/escaleras.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../../CSS/repello.css">
+     <link rel="icon" href="../../IMG/ingmaster.png" type="image/x-icon">
     <link rel="stylesheet" href="../../CSS/StyleMenu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
