--- a/HTML/cantbloques.html
+++ b/HTML/cantbloques.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../CSS/bloque.css">
     <link rel="stylesheet" href="../CSS/StyleMenu.css">
+    <link rel="icon" href="../IMG/ingmaster.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Bloques</title>
