--- a/HTML/Concreto/dosificacion.html
+++ b/HTML/Concreto/dosificacion.html
@@ -215,8 +215,8 @@
             const cantidadCemento = kilosCemento * cantidadConcreto;
             const bolsasCemento = Math.ceil(cantidadCemento / 42.5);
             const preciobolsas = bolsasCemento * preciocemento
-            const precioArena = precioarena * proporcionarArena * cantidadConcreto;
-            const precioGrava = preciograva * proporción Grava * cantidadConcreto;
+            const precioArena = precioarena * proporcionArena * cantidadConcreto;
+            const precioGrava = preciograva * proporcionGrava * cantidadConcreto;
             const total = preciobolsas + precioArena + precioGrava;
             const aguaMin = cantidadConcreto * 200; // Se recomienda 200 litros de agua por metro cúbico de concreto
 
