--- a/HTML/Acero/cantidad.html
+++ b/HTML/Acero/cantidad.html
@@ -160,7 +160,7 @@
             const cantidadEstribos = Math.ceil(longitudEstribos / largoVarilla);
 
             // Calcular la cantidad de alambre de amarre
-            const cantidadAmarres = elementos * cantidad;
+            const cantidadAmarres = elementos * cantidadEstribos;
             const metrosAmarreTotal = distanciaAmarre * cantidadAmarres;
             const librasAmarreTotal = Math.ceil(metrosAmarreTotal / 46.73); // calculamos que en una libra hay 46.73 metros de alambre de amarre
 
