--- a/HTML/Menu/menu.html
+++ b/HTML/Menu/menu.html
@@ -53,7 +53,7 @@
             <li><a href="https://viewer.autodesk.com/" target="_blank"><i class="fa fa-certificate"> Autodesk
                         Viewer</i></a></li>
             <li><a href="https://www.sketchup.com/es/plans-and-pricing/sketchup-free" target="_blank"><i
-                        class="fa fa-certificate"> Sketchup</i></a></li>
+                        class="fa fa-certificate"> SketchUp</i></a></li>
             <li><a href="https://www.google.com/intl/es-419/earth/" target="_blank"><i class="fa fa-globe"> Google
                         Earth</i></a></li>
             <li><a href="../video.html"
