--- a/HTML/index.html
+++ b/HTML/index.html
@@ -62,7 +62,7 @@
                         Otros Cálculos</a></li>
             <li><a href="https://viewer.autodesk.com/" target="_blank"><i class="fa fa-certificate"></i>Autodesk Viewer</a></li>
             <li><a href="https://www.sketchup.com/es/plans-and-pricing/sketchup-free" target="_blank"><i
-                        class="fa fa-certificate"></i> Sketchup</a></li>
+                        class="fa fa-certificate"></i> SketchUp</a></li>
             <li><a href="https://www.google.com/intl/es-419/earth/" target="_blank"><i class="fa fa-globe"></i> Google
                         Earth</a></li>
             <li><a href="../HTML/video.html" target="_blank"><i class="fab fa-youtube"></i>Video Tutoriales</a></li>
