--- a/HTML/formulario.html
+++ b/HTML/formulario.html
@@ -168,7 +168,7 @@ button {
                 distancia: ['Metros', 'Kilómetros', 'Centímetros', 'Pies', 'Pulgadas'],
                 volumen: ['Metros cúbicos', 'Litros', 'Mililitros', 'Galones', 'Onzas líquidas'],
                 peso: ['Kilogramos', 'Gramos', 'Libras', 'Onzas', 'Toneladas'],
-                presion: ['Pascal', 'Libra por pulgada cuadrada (PSI)', 'Bar', 'Torr']
+                presion: ['Libra por pulgada cuadrada (PSI)', 'Kilogramo por centímetro cuadrado (kg/cm2)', 'Mega pascal (MPa)', 'Pascal', 'Bar', 'Torr']
             };
 
             function cargarUnidades(tipo) {
@@ -249,10 +249,12 @@ button {
                         'Toneladas': { 'Kilogramos': valor * 1000, 'Gramos': valor * 1e6, 'Libras': valor * 2204.62, 'Onzas': valor * 35274 }
                     },
                     presion: {
-                        'Pascal': { 'Libra por pulgada cuadrada (PSI)': valor * 0.00014503773773359, 'Bar': valor * 1e-5, 'Torr': valor * 0.00750062 },
-                        'Libra por pulgada cuadrada (PSI)': { 'Pascal': valor * 6894.76, 'Bar': valor * 0.0689476, 'Torr': valor * 51.7149 },
-                        'Bar': { 'Pascal': valor * 100000, 'Libra por pulgada cuadrada (PSI)': valor * 14.5038, 'Torr': valor * 750.062 },
-                        'Torr': { 'Pascal': valor * 133.322, 'Libra por pulgada cuadrada (PSI)': valor * 0.0193368, 'Bar': valor * 0.00133322 }
+                        'Pascal': { 'Libra por pulgada cuadrada (PSI)': valor * 0.00014503773773359, 'Bar': valor * 1e-5, 'Torr': valor * 0.00750062, 'Kilogramo por centímetro cuadrado (kg/cm2)': valor * 0.0001019716213, 'Mega pascal (MPa)': valor * 1e-6, 'Mega pascal (MPa)': valor * 1e-6 },
+                        'Libra por pulgada cuadrada (PSI)': { 'Pascal': valor * 6894.76, 'Bar': valor * 0.0689476, 'Torr': valor * 51.7149, 'Kilogramo por centímetro cuadrado (kg/cm2)': valor * 0.07030695783, 'Mega pascal (MPa)': valor * 0.00689476 },
+                        'Bar': { 'Pascal': valor * 100000, 'Libra por pulgada cuadrada (PSI)': valor * 14.5038, 'Torr': valor * 750.062, 'Kilogramo por centímetro cuadrado (kg/cm2)': valor * 1.01972, 'Mega pascal (MPa)': valor * 0.1 },
+                        'Torr': { 'Pascal': valor * 133.322, 'Libra por pulgada cuadrada (PSI)': valor * 0.0193368, 'Bar': valor * 0.00133322, 'Kilogramo por centímetro cuadrado (kg/cm2)': valor * 0.00135951, 'Mega pascal (MPa)': valor * 0.000133322 },
+                        'Kilogramo por centímetro cuadrado (kg/cm2)': { 'Pascal': valor * 9806.65, 'Libra por pulgada cuadrada (PSI)': valor * 14.2233, 'Bar': valor * 0.981, 'Torr': valor * 735.559, 'Mega pascal (MPa)': valor * 0.0980665 },
+                        'Mega pascal (MPa)': { 'Pascal': valor * 1000000, 'Libra por pulgada cuadrada (PSI)': valor * 145.038, 'Bar': valor * 10, 'Torr': valor * 7500.62, 'Kilogramo por centímetro cuadrado (kg/cm2)': valor * 10 }
                     }
                 };
 
